<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cl_252525"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical"
        style="@style/ZixuanRecycleTitleStyle"
        android:text="@string/stock_code"
        />

    <TextView
        android:id="@+id/range"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="10dp"
        android:layout_alignParentEnd="true"
        android:gravity="center_vertical"
        style="@style/ZixuanRecycleTitleStyle"
        android:text="@string/range"
        />

    <TextView
        android:id="@+id/fluctuation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@+id/range"
        android:layout_marginRight="55dp"
        android:gravity="center_vertical"
        style="@style/ZixuanRecycleTitleStyle"
        android:text="@string/rate"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="70dp"
        android:gravity="center_vertical"
        android:layout_toLeftOf="@+id/fluctuation"
        style="@style/ZixuanRecycleTitleStyle"
        android:text="@string/current_price"
        />


    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="@color/cl_line"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>