<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cl_f5f5f5"
    android:orientation="vertical"
    >

    <com.rjzd.aistock.ui.views.ToolbarView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:actionLeftBackground="@drawable/image_back"
        app:titleText = "@string/account_binding"
        >
    </com.rjzd.aistock.ui.views.ToolbarView>


    <RelativeLayout
        android:id="@+id/rl_binding_mobile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_item_height"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/base_item_text_style"
            android:layout_centerVertical="true"
            android:text="@string/cellphone"
            />

        <TextView
            android:id="@+id/tv_binding_mobile"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/mine_item_height"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:textSize="@dimen/font_size_12"
            android:text="@string/unbind"
            android:drawableRight="@drawable/spread"
            android:drawablePadding="10dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_binding_wx"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_item_height"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/base_item_text_style"
            android:layout_centerVertical="true"
            android:text="@string/binding_wx"
            />

        <TextView
            android:id="@+id/tv_binding_wx"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/mine_item_height"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:textSize="@dimen/font_size_12"
            android:text="@string/unbind"
            android:drawableRight="@drawable/spread"
            android:drawablePadding="10dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_binding_qq"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_item_height"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/base_item_text_style"
            android:layout_centerVertical="true"
            android:text="@string/binding_qq"
            />

        <TextView
            android:id="@+id/tv_binding_qq"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/mine_item_height"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:textSize="@dimen/font_size_12"
            android:text="@string/unbind"
            android:drawableRight="@drawable/spread"
            android:drawablePadding="10dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_binding_sina"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_item_height"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/base_item_text_style"
            android:layout_centerVertical="true"
            android:text="@string/binding_sina"
            />

        <TextView
            android:id="@+id/tv_binding_sina"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/mine_item_height"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:textSize="@dimen/font_size_12"
            android:text="@string/unbind"
            android:drawableRight="@drawable/spread"
            android:drawablePadding="10dp"
            />
    </RelativeLayout>

</LinearLayout>