<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rjzd.aistock.ui.activity.LoginActivity"
    android:background="@color/cl_f5f5f5"
    >

    <com.rjzd.aistock.ui.views.ToolbarView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:actionLeftBackground="@drawable/image_back"
        app:titleText = "@string/remind_settings"
        >
    </com.rjzd.aistock.ui.views.ToolbarView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/base_item_text_style"
            android:layout_centerVertical="true"
            android:text="@string/remind_receive_new_msg"
            />

        <CheckBox
            android:id="@+id/cb_new_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:checked="true"
            />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_ai_trans_remind"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            style="@style/base_item_text_style"
            android:text="@string/remind_trans_position"
            />

        <CheckBox
            android:id="@+id/cb_ai_trans_remind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:checked="true"
            />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_prediction_remind"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            style="@style/base_item_text_style"
            android:text="@string/remind"
            />

        <CheckBox
            android:id="@+id/cb_remind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:checked="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_prediction_daily"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            style="@style/base_item_text_style"
            android:text="@string/daily"
            />

        <CheckBox
            android:id="@+id/cb_daily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:checked="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_important_msg_remind"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            style="@style/base_item_text_style"
            android:text="@string/remind_share"
            />

        <CheckBox
            android:id="@+id/cb_remind_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:checked="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/ll_ai_weeklynewspaper"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            style="@style/base_item_text_style"
            android:text="@string/remind_ai_weeklynewspaper"
            />

        <CheckBox
            android:id="@+id/remind_ai_weeklynewspaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:checked="true"
            />
    </RelativeLayout>


</LinearLayout>
